# Ferris

./: README.md
src/: CMakeLists.txt
src/console/: sisyphus.cpp
src/cove/: CMakeLists.txt
src/cove/barn/: cv_aid.cpp  cv_aid.h  cv_atomics.cpp  cv_atomics.h  cv_cexpr.h  cv_compare.h  cv_frager.h  cv_include.cpp  cv_include.h  cv_lackey.h  cv_minion.h  cv_ptr.h  cv_shared.h  cv_stdsupport.h  cv_trail.cpp  cv_trail.h  xd_cxxopts.h  xd_valuestr.h
src/cove/flux/: cv_flume.cpp  cv_flume.h  cv_spritz.cpp  cv_spritz.h  cv_xdoclistener.h  cv_xmlencoder.cpp  cv_xmlencoder.h
src/cove/net/: cv_graphnode.h
src/cove/silo/: cv_arena.cpp  cv_arena.h  cv_arena1.h  cv_arenatools.h  cv_crate.h  cv_cstr.h  cv_dlinklist.h  cv_extent.h  cv_iota.cpp  cv_iota.h  cv_pack.h  cv_slist.h  cv_stadium.h  cv_traversor.h  cv_trotter.h  cv_tuple.h  cv_typebouqet.cpp  cv_typebouqet.h  cv_typecask.cpp  cv_typecask.h  cv_typechest.h  cv_typeusher.cpp  cv_typeusher.h  cv_vecop.h  cv_vector.h
src/rube/: CMakeLists.txt
src/rube/barn/: ru_include.cpp  ru_include.h
src/rube/blocks/: ru_gates.h
src/rube/engine/: ru_rubereactor.cpp  ru_rubereactor.h  ru_rubesite.h  ru_site.h  ru_stave.cpp  ru_stave.h  ru_tuple.h
tools/builds/cmake/: CMakeLists.txt
tools/builds/codelite/Ferris/: Ferris.project  Ferris.workspace
tools/builds/vs/: Cove.vcxproj  Ferris.sln  Rube.vcxproj  Sisyphus.vcxproj
